// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button mode="default" should match snapshot 1`] = `
.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  background-color: #f0f0f7;
  border-color: #f0f0f7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  color: #8e929b;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c0:hover {
  background-color: #dcdce7;
  border-color: #dcdce7;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #b6bbc7;
  border-color: #b6bbc7;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  background-color: #f0f0f7;
  border-color: #f0f0f7;
  color: #b6bbc7;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button
  disabled={false}
  isLoading={false}
  mode="default"
  onClick={[Function]}
  type="button"
>
  <DefaultButton
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "DefaultButton-sc-2dhy0g-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "background-color:",
              "#f0f0f7",
              ";border-color:",
              "#f0f0f7",
              ";border-radius:4px;border-style:solid;border-width:1px;color:",
              "#8e929b",
              ";cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;white-space:nowrap;",
              " ",
              "&:hover{background-color:",
              "#dcdce7",
              ";border-color:",
              "#dcdce7",
              ";cursor:pointer;text-decoration:none;}",
              " ",
              "&:active{background-color:",
              "#b6bbc7",
              ";border-color:",
              "#b6bbc7",
              ";color:",
              "#ffffff",
              ";text-decoration:none;}",
              " ",
              "&:disabled{background-color:",
              "#f0f0f7",
              ";border-color:",
              "#f0f0f7",
              ";color:",
              "#b6bbc7",
              ";cursor:not-allowed;text-decoration:none;}",
            ],
          },
          "displayName": "DefaultButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "DefaultButton-sc-2dhy0g-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    DEFAULT_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </DefaultButton>
</Button>
`;

exports[`button mode="default" should match snapshot 2`] = `
.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  background-color: #f0f0f7;
  border-color: #f0f0f7;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  color: #8e929b;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c0:hover {
  background-color: #dcdce7;
  border-color: #dcdce7;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #b6bbc7;
  border-color: #b6bbc7;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  background-color: #f0f0f7;
  border-color: #f0f0f7;
  color: #b6bbc7;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button
  disabled={false}
  isLoading={false}
  mode="default"
  onClick={[Function]}
  type="button"
>
  <DefaultButton
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "DefaultButton-sc-2dhy0g-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "background-color:",
              "#f0f0f7",
              ";border-color:",
              "#f0f0f7",
              ";border-radius:4px;border-style:solid;border-width:1px;color:",
              "#8e929b",
              ";cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;white-space:nowrap;",
              " ",
              "&:hover{background-color:",
              "#dcdce7",
              ";border-color:",
              "#dcdce7",
              ";cursor:pointer;text-decoration:none;}",
              " ",
              "&:active{background-color:",
              "#b6bbc7",
              ";border-color:",
              "#b6bbc7",
              ";color:",
              "#ffffff",
              ";text-decoration:none;}",
              " ",
              "&:disabled{background-color:",
              "#f0f0f7",
              ";border-color:",
              "#f0f0f7",
              ";color:",
              "#b6bbc7",
              ";cursor:not-allowed;text-decoration:none;}",
            ],
          },
          "displayName": "DefaultButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "DefaultButton-sc-2dhy0g-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    DEFAULT_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </DefaultButton>
</Button>
`;

exports[`button mode="primary" should match snapshot 1`] = `
.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  background-color: #8045ff;
  border-color: #8045ff;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  color: #ffffff;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c0:hover {
  background-color: #6124e2;
  border-color: #6124e2;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #361876;
  border-color: #361876;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  background-color: #f0f0f7;
  border-color: #f0f0f7;
  color: #b6bbc7;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button
  disabled={false}
  isLoading={false}
  mode="primary"
  onClick={[Function]}
  type="button"
>
  <PrimaryButton
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "PrimaryButton-sc-1t8zuv9-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "background-color:",
              "#8045ff",
              ";border-color:",
              "#8045ff",
              ";border-radius:4px;border-style:solid;border-width:1px;color:",
              "#ffffff",
              ";cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;white-space:nowrap;",
              " ",
              "&:hover{background-color:",
              "#6124e2",
              ";border-color:",
              "#6124e2",
              ";cursor:pointer;text-decoration:none;}",
              " ",
              "&:active{background-color:",
              "#361876",
              ";border-color:",
              "#361876",
              ";text-decoration:none;}",
              " ",
              "&:disabled{background-color:",
              "#f0f0f7",
              ";border-color:",
              "#f0f0f7",
              ";color:",
              "#b6bbc7",
              ";cursor:not-allowed;text-decoration:none;}",
            ],
          },
          "displayName": "PrimaryButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "PrimaryButton-sc-1t8zuv9-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "iDvfiU",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    PRIMARY_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </PrimaryButton>
</Button>
`;

exports[`button mode="secondary" should match snapshot 1`] = `
.c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  position: relative;
  overflow: hidden;
  min-width: 14px;
}

.c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  opacity: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  background-color: #e4d8ff;
  border-color: #e4d8ff;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  color: #6124e2;
  cursor: pointer;
  font-size: 14px;
  line-height: 18px;
  outline: none;
  padding: 10px 20px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c0:hover {
  background-color: #d0bbff;
  border-color: #d0bbff;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #b898ff;
  border-color: #b898ff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  background-color: #f0f0f7;
  border-color: #f0f0f7;
  color: #b6bbc7;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button
  disabled={false}
  isLoading={false}
  mode="secondary"
  onClick={[Function]}
  type="button"
>
  <SecondaryButton
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <StyledComponent
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SecondaryButton-s3wp95-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "background-color:",
              "#e4d8ff",
              ";border-color:",
              "#e4d8ff",
              ";border-radius:4px;border-style:solid;border-width:1px;color:",
              "#6124e2",
              ";cursor:pointer;font-size:14px;line-height:18px;outline:none;padding:10px 20px;text-align:center;text-decoration:none;white-space:nowrap;",
              " ",
              "&:hover{background-color:",
              "#d0bbff",
              ";border-color:",
              "#d0bbff",
              ";cursor:pointer;text-decoration:none;}",
              " ",
              "&:active{background-color:",
              "#b898ff",
              ";border-color:",
              "#b898ff",
              ";text-decoration:none;}",
              " ",
              "&:disabled{background-color:",
              "#f0f0f7",
              ";border-color:",
              "#f0f0f7",
              ";color:",
              "#b6bbc7",
              ";cursor:not-allowed;text-decoration:none;}",
            ],
          },
          "displayName": "SecondaryButton",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SecondaryButton-s3wp95-0",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[Function]}
      type="button"
    >
      <button
        className="c0"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <ContentWrapper>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "ContentWrapper-sc-36hfub-0",
                  "isStatic": true,
                  "lastClassName": "c1",
                  "rules": Array [
                    "align-self:center;display:inline-flex;flex-wrap:nowrap;max-width:100%;position:relative;overflow:hidden;min-width:14px;",
                  ],
                },
                "displayName": "ContentWrapper",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "ContentWrapper-sc-36hfub-0",
                "target": "span",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <span
              className="c1"
            >
              <Content
                isLoading={false}
              >
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Content-sc-18psqsj-0",
                        "isStatic": false,
                        "lastClassName": "c2",
                        "rules": Array [
                          "flex:1 1 auto;opacity:",
                          [Function],
                          ";overflow:hidden;text-overflow:ellipsis;white-space:nowrap;",
                        ],
                      },
                      "displayName": "Content",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "Content-sc-18psqsj-0",
                      "target": "span",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  isLoading={false}
                >
                  <span
                    className="c2"
                  >
                    SECONDARY_BUTTON
                  </span>
                </StyledComponent>
              </Content>
            </span>
          </StyledComponent>
        </ContentWrapper>
      </button>
    </StyledComponent>
  </SecondaryButton>
</Button>
`;
